[package]
name = "github-activity"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "*"
serde_json = "=1.0.1"
serde = { version = "1.0.219", features = ["derive"]}
chrono = {version = "0.4.17", features = ["serde"]}
reqwest = "^0.12.15"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }